--- a/_posts/3001-01-01-template.md
+++ b/_posts/3001-01-01-template.md
@@ -4,7 +4,7 @@ author: 'First Last'
 date: 3001-01-31
 acknowledgement: 'A short description of the contributor(s) relevant background and connection to Hypha. About this length.'
 excerpt: 'This is the short preview appearing on Dripline and at the top of the article'
-#published: false # delete this line or change false to true
+published: false # delete this line or change false to true
 ---
 
 ### {{ page.excerpt }}
