Add basic description

--- a/_work/221a.md
+++ b/_work/221a.md
@@ -4,5 +4,4 @@ logo: /assets/images/logos/221a.png
 excerpt_separator: <!-- more -->
 practice_area: Co-Creation Lab
 ---
-Insert description here
-
+Hypha's Co-Creation Lab is working with 221A to build a working decentralized storage prototype for Galleries, Libraries, Archives and Museums (GLAMs).
