--- a/_work/221a.md
+++ b/_work/221a.md
@@ -4,4 +4,4 @@ logo: /assets/images/logos/221a.png
 excerpt_separator: <!-- more -->
 practice_area: Co-Creation Lab
 ---
-As part of 221A's future-forward Node Library initiative, Hypha is developing a public-facing decentralized storage prototype for the Galleries, Libraries, Archives and Museums (GLAM) sector. [The Node Library]([url](https://221a.ca/project/node-library/)) will provides artists, designers, and the public sector with the resources and infrastructure for fostering digital public goods in the Web3 space.
+As part of 221A's future-forward Node Library initiative, Hypha is developing a public-facing decentralized storage prototype for the Galleries, Libraries, Archives and Museums (GLAM) sector. [The Node Library]([url](https://221a.ca/project/node-library/)) will provide artists, designers, and the public sector with the resources and infrastructure for fostering digital public goods in the Web3 space.
